GH-120: Fix auto-wiring ambiguity in the `AwsS3SupplierConfiguration`
Fixes: https://github.com/spring-cloud/spring-functions-catalog/issues/120